@@ -1,0 +1,159 @@
+// Sequence test with failures
+CONTRACT_TYPE
+{
+    // Unique name of the contract (required)
+    name = SequenceTestWithFailures
+
+    // Contract text
+    title = Sequence Test (with failures)
+    description = A more detailed description of the contract.  This is where you come in.
+    synopsis = We want you to do a thing.
+    completedMessage = You have done the thing.
+
+    PARAMETER
+    {
+        name = Sequence1
+        type = Sequence
+
+        PARAMETER
+        {
+            name = OrbitMun
+            type = VesselParameterGroup
+
+            title = Orbit the Mun
+
+            PARAMETER
+            {
+                name = ReachSituation1
+                type = ReachSituation
+
+                disableOnStateChange = false
+
+                situation = ORBITING
+            }
+
+            PARAMETER
+            {
+                name = ReachDestination1
+                type = ReachDestination
+
+                disableOnStateChange = false
+
+                targetBody = Mun
+            }
+        }
+
+        PARAMETER
+        {
+            name = OrbitMinmus
+            type = VesselParameterGroup
+
+            title = Orbit Minmus
+
+            PARAMETER
+            {
+                name = ReachSituation1
+                type = ReachSituation
+
+                disableOnStateChange = false
+
+                situation = ORBITING
+            }
+
+            PARAMETER
+            {
+                name = ReachDestination1
+                type = ReachDestination
+
+                disableOnStateChange = false
+
+                targetBody = Minmus
+            }
+        }
+    }
+}
+
+// Sequence test without failures
+CONTRACT_TYPE
+{
+    // Unique name of the contract (required)
+    name = SequenceTestWithoutFailures
+
+    // Contract text
+    title = Sequence Test (without failures)
+    description = A more detailed description of the contract.  This is where you come in.
+    synopsis = We want you to do a thing.
+    completedMessage = You have done the thing.
+
+    PARAMETER
+    {
+        name = OrbitMunSeqNode
+        type = SequenceNode
+
+        PARAMETER
+        {
+            name = OrbitMun
+            type = VesselParameterGroup
+
+            title = Orbit the Mun
+
+            disableOnStateChange = false
+
+            PARAMETER
+            {
+                name = ReachSituation1
+                type = ReachSituation
+
+                disableOnStateChange = false
+
+                situation = ORBITING
+            }
+
+            PARAMETER
+            {
+                name = ReachDestination1
+                type = ReachDestination
+
+                disableOnStateChange = false
+
+                targetBody = Mun
+            }
+        }
+    }
+
+    PARAMETER
+    {
+        name = OrbitMinmusSeqNode
+        type = SequenceNode
+
+        PARAMETER
+        {
+            name = OrbitMinmus
+            type = VesselParameterGroup
+
+            title = Orbit Minmus
+
+            disableOnStateChange = false
+
+            PARAMETER
+            {
+                name = ReachSituation1
+                type = ReachSituation
+
+                disableOnStateChange = false
+
+                situation = ORBITING
+            }
+
+            PARAMETER
+            {
+                name = ReachDestination1
+                type = ReachDestination
+
+                disableOnStateChange = false
+
+                targetBody = Minmus
+            }
+        }
+    }
+}
